--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -13,7 +13,9 @@ ext.versions = [
     kotlin         : '1.4.10',
     coreKtxVersion : '1.5.0-alpha03',
     composeVersion : '1.0.0-alpha03',
+
     frescoVersion  : '2.3.0',
+    glideVersion   : '4.11.0',
 
     // for demo
     materialVersion: '1.3.0-alpha02',
