--- a/glide/build.gradle
+++ b/glide/build.gradle
@@ -14,6 +14,7 @@ android {
     targetSdkVersion versions.compileSdk
     versionCode versions.versionCode
     versionName versions.versionName
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
   }
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
@@ -32,8 +33,12 @@ android {
     buildConfig false
     compose true
   }
+  testOptions {
+    unitTests {
+      includeAndroidResources = true
+    }
+  }
 }
-
 
 kotlin {
   explicitApiWarning()
@@ -46,13 +51,19 @@ dependencies {
   // androidx jetpack
   implementation "androidx.core:core-ktx:$versions.coreKtxVersion"
 
+  // glide
+  api "com.github.bumptech.glide:glide:$versions.glideVersion"
+
   // compose
   implementation "androidx.compose.ui:ui:$versions.composeVersion"
   implementation "androidx.compose.runtime:runtime:$versions.composeVersion"
   implementation "androidx.compose.foundation:foundation:$versions.composeVersion"
 
-  // glide
-  api "com.github.bumptech.glide:glide:$versions.glideVersion"
+  // unit test
+  androidTestImplementation "androidx.ui:ui-test:$versions.composeVersion"
+  androidTestImplementation "androidx.compose.ui:ui:$versions.composeVersion"
+  androidTestImplementation "androidx.test:rules:$versions.rulesVersion"
+  androidTestImplementation "com.squareup.okhttp3:mockwebserver:$versions.okHttpVersion"
 }
 
 dokkaHtml.configure {
