--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -20,8 +20,7 @@ ext.versions = [
     // unit test
     rulesVersion   : '1.2.0',
     runnerVersion  : '1.3.0-beta01',
-    okHttpVersion  : '4.9.0',
 
     // for demo
-    materialVersion: '1.3.0-alpha02',
+    materialVersion: '1.3.0-alpha02'
 ]
