Add landscapist-coil module including CoilImage and CoilImageState

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
   // landscapist
   implementation project(":fresco")
   implementation project(":glide")
+  implementation project(":coil")
 }
 
 apply from: '../spotless.gradle'
