--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,27 +1,28 @@
 ext.versions = [
-    minSdk         : 21,
-    compileSdk     : 30,
-    versionCode    : 8,
-    versionName    : '1.0.7',
+    minSdk           : 21,
+    compileSdk       : 30,
+    versionCode      : 8,
+    versionName      : '1.0.7',
 
-    gradleBuildTool: '4.2.0-alpha13',
-    spotlessGradle : '5.6.1',
-    ktlintGradle   : '0.39.0',
-    dokkaGradle    : '1.4.0',
-    bintrayRelease : '1.0.0',
+    gradleBuildTool  : '4.2.0-alpha13',
+    spotlessGradle   : '5.6.1',
+    ktlintGradle     : '0.39.0',
+    dokkaGradle      : '1.4.0',
+    bintrayRelease   : '1.0.0',
 
-    kotlin         : '1.4.10',
-    coreKtxVersion : '1.5.0-alpha04',
-    composeVersion : '1.0.0-alpha05',
+    kotlin           : '1.4.10',
+    coreKtxVersion   : '1.5.0-alpha04',
+    composeVersion   : '1.0.0-alpha05',
+    coroutinesVersion: '1.4.0',
 
-    frescoVersion  : '2.3.0',
-    glideVersion   : '4.11.0',
-    coilVersion    : '1.0.0',
+    frescoVersion    : '2.3.0',
+    glideVersion     : '4.11.0',
+    coilVersion      : '1.0.0',
 
     // unit test
-    rulesVersion   : '1.2.0',
-    runnerVersion  : '1.3.0-beta01',
+    rulesVersion     : '1.2.0',
+    runnerVersion    : '1.3.0-beta01',
 
     // for demo
-    materialVersion: '1.3.0-alpha02'
+    materialVersion  : '1.3.0-alpha02'
 ]
