--- a/landscapist/build.gradle
+++ b/landscapist/build.gradle
@@ -39,6 +39,7 @@ dependencies {
   implementation "androidx.compose.ui:ui:$versions.composeVersion"
   implementation "androidx.compose.runtime:runtime:$versions.composeVersion"
   implementation "androidx.compose.foundation:foundation:$versions.composeVersion"
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutinesVersion"
 }
 
 tasks.withType(Javadoc).all { enabled = false }
