--- a/landscapist/build.gradle
+++ b/landscapist/build.gradle
@@ -3,7 +3,6 @@ plugins {
   id 'kotlin-android'
 }
 
-apply plugin: 'com.github.panpf.bintray-publish'
 apply from: '../dependencies.gradle'
 
 android {
@@ -44,16 +43,12 @@ dependencies {
 
 tasks.withType(Javadoc).all { enabled = false }
 
-publish {
-  userOrg = 'devmagician'
-  groupId = 'com.github.skydoves'
-  artifactId = 'landscapist'
-  publishVersion = versions.versionName
-  desc = 'Jetpack Compose image library for requesting and loading images.'
-  website = 'https://github.com/skydoves/Landscapist'
-  issueTracker = "${website}/issues"
-  repository = "${website}.git"
-}
-
+ext.repository = [
+    name       : "landscapist",
+    description: "Jetpack Compose image library for requesting and loading images.",
+    websiteUrl : "https://github.com/skydoves/Landscapist",
+    scm        : 'scm:git@github.com/skydoves/Landscapist.git'
+]
 
 apply from: '../spotless.gradle'
+apply from: '../publish.gradle'
