--- a/publish.gradle
+++ b/publish.gradle
@@ -2,10 +2,11 @@ apply plugin: 'com.jfrog.bintray'
 apply plugin: 'maven-publish'
 apply from: '../dependencies.gradle'
 
-def (property_user, property_key) = getBintrayProperties()
+def (bintray_user, bintray_key) = getBintrayProperties()
+def (oss_user, oss_key) = getOSSProperties()
 bintray {
-    user = property_user
-    key = property_key
+    user = bintray_user
+    key = bintray_key
 
     publications = ["release"]
     publish = true
@@ -33,6 +34,11 @@ bintray {
             vcsTag = versions.versionName
             released = new Date()
             gpg { sign = true }
+            mavenCentralSync {
+                sync = true
+                user = oss_user
+                password = oss_key
+            }
         }
     }
 }
@@ -86,6 +92,22 @@ def getBintrayProperties() {
         return [
             properties.getProperty("bintray.user"),
             properties.getProperty("bintray.key")
+        ]
+    } else {
+        print(filename + " does not exist!")
+        return ["", ""]
+    }
+}
+
+def getOSSProperties() {
+    def filename = "local.properties"
+    def propsFile = rootProject.file(filename)
+    if (propsFile.exists()) {
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file(filename).newDataInputStream())
+        return [
+            properties.getProperty("oss.user"),
+            properties.getProperty("oss.key")
         ]
     } else {
         print(filename + " does not exist!")
