Add packagingOptions to the fresco module

--- a/fresco/build.gradle
+++ b/fresco/build.gradle
@@ -45,6 +45,12 @@ android {
       includeAndroidResources = true
     }
   }
+
+  packagingOptions {
+    excludes += "/META-INF/AL2.0"
+    excludes += "/META-INF/LGPL2.1"
+  }
+
 }
 
 kotlin {
