--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -25,5 +25,5 @@ ext.versions = [
     runnerVersion     : '1.3.0-beta01',
 
     // for demo
-    materialVersion   : '1.3.0-alpha04'
+    materialVersion   : '1.3.0-beta01'
 ]
