--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,20 +4,20 @@ ext.versions = [
     versionCode       : 14,
     versionName       : '1.1.3',
 
-    gradleBuildTool   : '4.2.0-alpha16',
-    spotlessGradle    : '5.8.0',
-    ktlintGradle      : '0.39.0',
+    gradleBuildTool   : '7.0.0-alpha05',
+    spotlessGradle    : '5.9.0',
+    ktlintGradle      : '0.40.0',
     dokkaGradle       : '1.4.0',
     bintrayPlugin     : '1.8.5',
 
-    kotlin            : '1.4.21',
+    kotlin            : '1.4.21-2',
     coreKtxVersion    : '1.5.0-alpha05',
-    composeVersion    : '1.0.0-alpha10',
+    composeVersion    : '1.0.0-alpha11',
     composeToolVersion: '1.0.0-alpha07',
     coroutinesVersion : '1.4.0',
 
     frescoVersion     : '2.3.0',
-    glideVersion      : '4.11.0',
+    glideVersion      : '4.12.0',
     coilVersion       : '1.0.0',
 
     // unit test
