--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,18 @@ allprojects {
   }
 }
 
+subprojects {
+  tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach { compile ->
+    kotlinOptions {
+      jvmTarget = "1.8"
+      freeCompilerArgs += "-Xallow-jvm-ir-dependencies"
+      freeCompilerArgs += "-Xskip-prerelease-check"
+      freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
+      useIR = true
+    }
+  }
+}
+
 task clean(type: Delete) {
   delete rootProject.buildDir
 }
