Update JDK version to 11 for workflow and spotless gradle options

--- a/spotless.gradle
+++ b/spotless.gradle
@@ -8,4 +8,10 @@ spotless {
     trimTrailingWhitespace()
     endWithNewline()
   }
+
+  groovyGradle {
+    target '**/*.gradle'
+    licenseHeaderFile rootProject.file('spotless.license.kt'),
+        '(buildscript|apply|import)'
+  }
 }
