--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,12 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
- 
+
+plugins {
+  id 'com.android.application'
+  id 'kotlin-android'
+}
+
 apply from: "$rootDir/dependencies.gradle"
 
 android {
