--- a/glide/build.gradle
+++ b/glide/build.gradle
@@ -13,7 +13,13 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
- 
+
+plugins {
+  id 'com.android.library'
+  id 'kotlin-android'
+  id 'org.jetbrains.dokka'
+}
+
 apply from: "$rootDir/dependencies.gradle"
 
 android {
