--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,49 @@
-# Project-wide Gradle settings.
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
-# AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system, and which are packaged with your app"s APK
-# https://developer.android.com/topic/libraries/support-library/androidx-rn
+#
+# Copyright 2020 skydoves (Jaewoong Eum)
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
+# Jvm environments
+org.gradle.jvmargs=-Xmx4g
+
+# AndroidX
 android.useAndroidX=true
-# Automatically convert third-party libraries to use AndroidX
-android.enableJetifier=true
+
+# Required to publish to Nexus
+systemProp.org.gradle.internal.publish.checksums.insecure=true
+
+# Increase timeout when pushing to Sonatype
+systemProp.org.gradle.internal.http.connectionTimeout=120000
+systemProp.org.gradle.internal.http.socketTimeout=120000
+
+# Maven
+GROUP=com.github.skydoves
+
+VERSION_NAME=1.1.5-SNAPSHOT
+
+POM_URL=https://github.com/skydoves/lanndscapist/
+POM_SCM_URL=https://github.com/skydoves/lanndscapist/
+POM_SCM_CONNECTION=scm:git:git://github.com/skydoves/lanndscapist.git
+POM_SCM_DEV_CONNECTION=scm:git:git://github.com/skydoves/lanndscapist.git
+
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+
+POM_DEVELOPER_ID=skydoves
+POM_DEVELOPER_NAME=Jaewoong Eum
+POM_DEVELOPER_URL=https://github.com/skydoves/
+
+RELEASE_REPOSITORY_URL=https://oss.sonatype.org/service/local/staging/deploy/maven2/
+SNAPSHOT_REPOSITORY_URL=https://oss.sonatype.org/content/repositories/snapshots/
