--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -10,10 +10,10 @@ ext.versions = [
     dokkaGradle       : '1.4.20',
     mavenPublish      : '0.13.0',
 
-    kotlin            : '1.4.21-2',
+    kotlin            : '1.4.30',
     coreKtxVersion    : '1.5.0-alpha05',
-    composeVersion    : '1.0.0-alpha11',
-    coroutinesVersion : '1.4.0',
+    composeVersion    : '1.0.0-alpha12',
+    coroutinesVersion : '1.4.1',
 
     frescoVersion     : '2.3.0',
     glideVersion      : '4.12.0',
