--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,28 +1,30 @@
 ext.versions = [
-    minSdk            : 21,
-    compileSdk        : 30,
-    versionCode       : 15,
-    versionName       : '1.1.4',
+    minSdk           : 21,
+    compileSdk       : 30,
+    versionCode      : 15,
+    versionName      : '1.1.4',
 
-    gradleBuildTool   : '7.0.0-alpha05',
-    spotlessGradle    : '5.9.0',
-    ktlintGradle      : '0.40.0',
-    dokkaGradle       : '1.4.20',
-    mavenPublish      : '0.13.0',
+    gradleBuildTool  : '7.0.0-alpha05',
+    spotlessGradle   : '5.9.0',
+    ktlintGradle     : '0.40.0',
+    dokkaGradle      : '1.4.20',
+    mavenPublish     : '0.13.0',
 
-    kotlin            : '1.4.30',
-    coreKtxVersion    : '1.5.0-alpha05',
-    composeVersion    : '1.0.0-alpha12',
-    coroutinesVersion : '1.4.1',
+    kotlin           : '1.4.30',
+    coreKtxVersion   : '1.5.0-alpha05',
+    composeVersion   : '1.0.0-alpha12',
+    constraintVersion: '1.0.0-alpha02',
+    activityVersion  : '1.3.0-alpha02',
+    coroutinesVersion: '1.4.1',
 
-    frescoVersion     : '2.3.0',
-    glideVersion      : '4.12.0',
-    coilVersion       : '1.0.0',
+    frescoVersion    : '2.3.0',
+    glideVersion     : '4.12.0',
+    coilVersion      : '1.0.0',
 
     // unit test
-    rulesVersion      : '1.2.0',
-    runnerVersion     : '1.3.0-beta01',
+    rulesVersion     : '1.2.0',
+    runnerVersion    : '1.3.0-beta01',
 
     // for demo
-    materialVersion   : '1.3.0-beta01'
+    materialVersion  : '1.3.0-beta01'
 ]
