--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,10 +11,10 @@ ext.versions = [
     mavenPublish     : '0.13.0',
 
     kotlin           : '1.4.30',
-    coreKtxVersion   : '1.5.0-alpha05',
-    composeVersion   : '1.0.0-alpha12',
-    constraintVersion: '1.0.0-alpha02',
-    activityVersion  : '1.3.0-alpha02',
+    coreKtxVersion   : '1.5.0-beta01',
+    composeVersion   : '1.0.0-beta01',
+    constraintVersion: '1.0.0-alpha03',
+    activityVersion  : '1.3.0-alpha03',
     coroutinesVersion: '1.4.1',
 
     frescoVersion    : '2.3.0',
