--- a/landscapist/build.gradle
+++ b/landscapist/build.gradle
@@ -52,6 +52,7 @@ kotlin {
 }
 
 dependencies {
+  implementation "androidx.core:core-ktx:$versions.coreKtxVersion"
   implementation "androidx.compose.ui:ui:$versions.composeVersion"
   implementation "androidx.compose.runtime:runtime:$versions.composeVersion"
   implementation "androidx.compose.foundation:foundation:$versions.composeVersion"
