Add lintOptions as false

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
     versionName versions.versionName
   }
 
+  lintOptions {
+    abortOnError false
+  }
+
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
