--- a/coil/build.gradle
+++ b/coil/build.gradle
@@ -77,11 +77,11 @@ dependencies {
   androidTestImplementation "androidx.test:rules:$versions.rulesVersion"
 }
 
-afterEvaluate {
-  tasks.withType(org.jetbrains.dokka.gradle.DokkaTask).configureEach {
-    outputDirectory.set(rootProject.file('docs/api'))
-  }
-}
+//afterEvaluate {
+//  tasks.withType(org.jetbrains.dokka.gradle.DokkaTask).configureEach {
+//    outputDirectory.set(rootProject.file('docs/api'))
+//  }
+//}
 
 dokkaHtml.configure {
   dokkaSourceSets {
