--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
   repositories {
     google()
     mavenCentral()
+    jcenter()
   }
   dependencies {
     classpath "com.android.tools.build:gradle:$versions.gradleBuildTool"
@@ -17,6 +18,7 @@ allprojects {
   repositories {
     google()
     mavenCentral()
+    jcenter()
   }
 }
 
