--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -10,6 +10,11 @@ ext.versions = [
     dokkaGradle      : '1.4.32',
     mavenPublish     : '0.15.1',
 
+    // di
+    hiltCoreVersion      : '2.37',
+    hiltVersion          : '1.0.0',
+    hiltComposeNavigation: '1.0.0-alpha02',
+
     kotlin           : '1.5.10',
     coreKtxVersion   : '1.5.0-beta01',
     composeVersion   : '1.0.0-beta09',
