--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,12 @@ android {
     targetSdkVersion versions.compileSdk
     versionCode versions.versionCode
     versionName versions.versionName
+
+    javaCompileOptions {
+      annotationProcessorOptions {
+        arguments["dagger.hilt.disableModulesHaveInstallInCheck"] = "true"
+      }
+    }
   }
 
   lintOptions {
@@ -69,8 +75,6 @@ dependencies {
   implementation "androidx.hilt:hilt-navigation-compose:$versions.hiltComposeNavigation"
   kapt "com.google.dagger:hilt-compiler:$versions.hiltCoreVersion"
   kapt "androidx.hilt:hilt-compiler:$versions.hiltVersion"
-  androidTestImplementation "com.google.dagger:hilt-android-testing:$versions.hiltCoreVersion"
-  kaptAndroidTest "com.google.dagger:hilt-compiler:$versions.hiltCoreVersion"
 
   // compose
   implementation "androidx.compose.ui:ui:$versions.composeVersion"
