--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
     targetSdkVersion versions.compileSdk
     versionCode versions.versionCode
     versionName versions.versionName
+    multiDexEnabled = true
     javaCompileOptions {
       annotationProcessorOptions {
         arguments["dagger.hilt.disableModulesHaveInstallInCheck"] = "true"
@@ -70,7 +71,6 @@ dependencies {
 
   // hilt
   implementation "com.google.dagger:hilt-android:$versions.hiltCoreVersion"
-  implementation "androidx.hilt:hilt-navigation-compose:$versions.hiltComposeNavigation"
   kapt "com.google.dagger:hilt-compiler:$versions.hiltCoreVersion"
   kapt "androidx.hilt:hilt-compiler:$versions.hiltVersion"
 
@@ -86,6 +86,8 @@ dependencies {
   implementation "androidx.compose.runtime:runtime-livedata:$versions.composeVersion"
   implementation "androidx.compose.ui:ui-tooling:$versions.composeVersion"
   implementation "androidx.constraintlayout:constraintlayout-compose:$versions.constraintVersion"
+
+  implementation "androidx.multidex:multidex:$versions.multidex"
 
   // landscapist
   implementation project(":fresco")
