--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,19 +1,18 @@
 ext.versions = [
     minSdk           : 21,
     compileSdk       : 30,
-    versionCode      : 28,
-    versionName      : '1.2.7',
+    versionCode      : 29,
+    versionName      : '1.2.8',
 
     gradleBuildTool  : '7.0.0-beta03',
-    spotlessGradle   : '5.13.0',
+    spotlessGradle   : '5.14.0',
     ktlintGradle     : '0.40.0',
     dokkaGradle      : '1.4.32',
     mavenPublish     : '0.15.1',
 
     // di
-    hiltCoreVersion      : '2.37',
-    hiltVersion          : '1.0.0',
-    hiltComposeNavigation: '1.0.0-alpha02',
+    hiltCoreVersion  : '2.37',
+    hiltVersion      : '1.0.0',
 
     kotlin           : '1.5.10',
     coreKtxVersion   : '1.5.0-beta01',
@@ -21,6 +20,7 @@ ext.versions = [
     constraintVersion: '1.0.0-alpha07',
     activityVersion  : '1.3.0-alpha08',
     coroutinesVersion: '1.4.1',
+    multidex         : '2.0.1',
 
     frescoVersion    : '2.5.0',
     glideVersion     : '4.12.0',
