--- a/coil/build.gradle
+++ b/coil/build.gradle
@@ -57,8 +57,8 @@ android {
   }
 }
 
-kotlin {
-  explicitApi()
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+  kotlinOptions.freeCompilerArgs += ["-Xexplicit-api=strict"]
 }
 
 dependencies {
