--- a/fresco/build.gradle
+++ b/fresco/build.gradle
@@ -58,8 +58,8 @@ android {
 
 }
 
-kotlin {
-  explicitApi()
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+  kotlinOptions.freeCompilerArgs += ["-Xexplicit-api=strict"]
 }
 
 dependencies {
