--- a/landscapist/build.gradle
+++ b/landscapist/build.gradle
@@ -45,8 +45,8 @@ android {
   }
 }
 
-kotlin {
-  explicitApi()
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+  kotlinOptions.freeCompilerArgs += ["-Xexplicit-api=strict"]
 }
 
 dependencies {
