--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -16,7 +16,7 @@ ext.versions = [
 
     kotlin           : '1.5.10',
     coreKtxVersion   : '1.5.0-beta01',
-    composeVersion   : '1.0.0-rc02',
+    composeVersion   : '1.0.0',
     constraintVersion: '1.0.0-alpha07',
     activityVersion  : '1.3.0-alpha08',
     coroutinesVersion: '1.5.0',
