--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,10 +1,10 @@
 ext.versions = [
     minSdk           : 21,
     compileSdk       : 30,
-    versionCode      : 29,
-    versionName      : '1.2.8',
+    versionCode      : 30,
+    versionName      : '1.3.0',
 
-    gradleBuildTool  : '7.0.0-beta05',
+    gradleBuildTool  : '7.0.0',
     spotlessGradle   : '5.14.0',
     ktlintGradle     : '0.41.0',
     dokkaGradle      : '1.4.32',
