--- a/landscapist/build.gradle
+++ b/landscapist/build.gradle
@@ -55,6 +55,7 @@ dependencies {
   implementation "androidx.compose.runtime:runtime:$versions.composeVersion"
   implementation "androidx.compose.foundation:foundation:$versions.composeVersion"
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutinesVersion"
+  api "androidx.palette:palette-ktx:$versions.paletteVersion"
 }
 
 dokkaHtml.configure {
