Implement FrescoWebImage and fresco-websupport module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,7 @@ dependencies {
 
   // landscapist
   implementation project(":fresco")
+  implementation project(":fresco-websupport")
   implementation project(":glide")
   implementation project(":coil")
 }
