--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = "LandscapistDemo"
 include ':app'
-include ':fresco'
 include ':landscapist'
-include ':glide'
 include ':coil'
+include ':glide'
+include ':fresco'
+include ':fresco-websupport'
