--- a/fresco/src/androidTest/AndroidManifest.xml
+++ b/fresco/src/androidTest/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.skydoves.landscapist.fresco">
+  package="com.skydoves.landscapist.fresco"
+  xmlns:tools="http://schemas.android.com/tools">
 
-  <uses-sdk android:targetSdkVersion="30" />
+  <uses-sdk android:targetSdkVersion="31" />
 
-  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="androide.permission.INTERNET" />
 
   <application android:name=".FrescoTestApplication">
     <activity
-        android:name="androidx.activity.ComponentActivity"
-        android:theme="@style/Theme.FrescoTest"
-        tools:replace="android:theme" />
+      android:name="androidx.activity.ComponentActivity"
+      android:exported="false"
+      tools:node="merge" />
   </application>
 
 </manifest>
