--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     classpath "com.vanniktech:gradle-maven-publish-plugin:$versions.mavenPublish"
     classpath "org.jetbrains.dokka:dokka-gradle-plugin:$versions.dokkaGradle"
     classpath "com.google.dagger:hilt-android-gradle-plugin:$versions.hiltCoreVersion"
+    classpath "org.jetbrains.kotlinx:binary-compatibility-validator:$versions.binaryValidator"
   }
 }
 
