--- a/fresco-websupport/build.gradle
+++ b/fresco-websupport/build.gradle
@@ -18,6 +18,7 @@ plugins {
   id 'com.android.library'
   id 'kotlin-android'
   id 'org.jetbrains.dokka'
+  id 'binary-compatibility-validator'
 }
 
 apply from: "$rootDir/dependencies.gradle"
