--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,25 +1,42 @@
 name: Android CI
 
 on:
-  push:
-    branches: [ master ]
+ push:
+  branches:
+   - master
   pull_request:
-    branches: [ master ]
+   branches:
+   - master
 
 jobs:
-  build:
-
+ build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-      - name: set up JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Make Gradle executable
-        run: chmod +x ./gradlew
-      - name: Build with Gradle
-        run: ./gradlew build
-      - name: Build Debug APK
-        run: ./gradlew assembleDebug
+    - uses: actions/checkout@v2
+
+    - name: set up JDK
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+
+    - name: Cache Gradle and wrapper
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+        restore-keys: |
+           ${{ runner.os }}-gradle-
+        
+    - name: Make Gradle executable
+      run: chmod +x ./gradlew
+      
+    - name: spotless
+      run: ./gradlew spotlessCheck
+    
+    - name: API check
+      run: ./gradlew apiCheck    
+      
+    - name: Build with Gradle
+      run: ./gradlew build
