--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,14 +2,11 @@ name: Android CI
 
 on:
  push:
-  branches:
-   - master
+  branches: [ master ]
  pull_request:
-  branches:
-   - '*'
+  branches: [ '*' ]
 
 jobs:
-
   lint:
     name: Spotless check
     runs-on: ubuntu-18.04
@@ -36,34 +33,29 @@ jobs:
       - name: API check
         run: ./gradlew apiCheck
 
- build:
+
+  build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: set up JDK
-      uses: actions/setup-java@v1
-      with:
-        java-version: 11
+      - name: set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
 
-    - name: Cache Gradle and wrapper
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-        restore-keys: |
-           ${{ runner.os }}-gradle-
-        
-    - name: Make Gradle executable
-      run: chmod +x ./gradlew
-      
-    - name: spotless
-      run: ./gradlew spotlessCheck
-    
-    - name: API check
-      run: ./gradlew apiCheck    
-      
-    - name: Build with Gradle
-      run: ./gradlew build
+      - name: Cache Gradle and wrapper
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Make Gradle executable
+        run: chmod +x ./gradlew
+
+      - name: Build with Gradle
+        run: ./gradlew build
