--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,6 +7,32 @@ on:
   branches: [ '*' ]
 
 jobs:
+  lint:
+    name: Spotless check
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: spotless
+        run: ./gradlew spotlessCheck
+
+  api_check:
+    name: API check
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: API check
+        run: ./gradlew apiCheck
+
   build:
     runs-on: ubuntu-latest
     steps:
@@ -29,12 +55,6 @@ jobs:
 
       - name: Make Gradle executable
         run: chmod +x ./gradlew
-
-      - name: spotless
-        run: ./gradlew spotlessCheck
-
-      - name: API check
-        run: ./gradlew apiCheck
 
       - name: Build with Gradle
         run: ./gradlew build
