--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -17,7 +17,7 @@ ext.versions = [
 
     kotlin           : '1.6.0',
     coreKtxVersion   : '1.5.0-beta01',
-    composeVersion   : '1.1.0-beta04',
+    composeVersion   : '1.1.0-rc01',
     constraintVersion: '1.0.0-alpha07',
     activityVersion  : '1.3.0-alpha08',
     coroutinesVersion: '1.5.0',
