--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -28,9 +28,10 @@ ext.versions = [
 
     paletteVersion   : '1.0.0',
 
-    // unit test
-    rulesVersion     : '1.2.0',
-    runnerVersion    : '1.3.0-beta01',
+    // Android Unit Test
+    rules            : '1.4.0',
+    androidxTest     : '1.4.0',
+    androidxTestJunit: '1.1.3',
 
     // for demo
     materialVersion  : '1.3.0-beta01'
